--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 /********************** Global Styles ************************/
-@import url("https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap");
 
 *,
 *::before,
@@ -11,7 +11,7 @@
 
 html {
   font-size: 10px;
-  font-family: sans-serif, cursive;
+  font-family: "Poppins", sans-serif;
 }
 
 body {
@@ -266,7 +266,7 @@ form input {
   padding: 1rem;
   border-radius: 0.4rem 0.4rem 0 0;
   border-bottom: 1px solid #2ab7ca;
-  font-family: "Luckiest Guy", cursive;
+  font-family: "Poppins", sans-serif;
   font-size: 2rem;
   letter-spacing: 0.1rem;
 }
@@ -285,7 +285,7 @@ form button {
   font-size: 2.2rem;
   letter-spacing: 0.5rem;
   cursor: pointer;
-  font-family: "Luckiest Guy", cursive;
+  font-family: "Poppins", sans-serif;
   transition: all 0.4s ease;
   margin: 2rem 0;
 }
